# STM32-uGFX-Cmake

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
Inc/: includes.h
cmake/: FindFreeRTOS.cmake  FindSTDPERIPH.cmake  FindSTM32Discovery.cmake  FindSTM32STD.cmake  FindSTM32STDPERIPH.cmake  FinduGFX.cmake  cleanall.cmake  gcc_stm32.cmake  uGFX_GDISP.cmake
config/vscode/: README.md  extensions.json  settings.json.in  tasks.json
inc/: gfxconf.h
